# backend-python

./: .env.example  .gitignore  AI_ADD_TASK_DOCUMENTATION.md  AI_DELETION_COMPREHENSIVE_FIX.md  AI_DELETION_FIXED.md  AI_DELETION_FIX_SUMMARY.md  AI_GENERATE_SCHEDULE_DOCUMENTATION.md  AI_SERVICE_FLOW_UPDATE.md  AI_Task_Manager_API.postman_collection.json  DELETION_BUG_FIX_SUMMARY.md  IST_IMPLEMENTATION_SUMMARY.md  POSTMAN_GUIDE.md  Procfile  README.md  SECURITY_MIGRATION.md  TROUBLESHOOTING_GUIDE.md  ai.py  ai_assistant.py  ai_scheduler.py  app.py  build.sh  collaboration.py  config.py  database.py  debug_ai.py  debug_ai_assistance_deletion.py  debug_endpoints.py  diagnose_ai_deletion.py  home_routes.py  login_register.py  pyproject.toml  render.yaml  requirements-backup.txt  requirements-minimal.txt  requirements.txt  schedule.py  setup.cfg  simple_ai_test.py  simple_test.py  tasks.py  (+16 more)
