[metadata]
name = python-special-backend
version = 1.0.0

[options]
python_requires = >=3.10.0,<3.11.0
install_requires =
    Flask==2.3.3
    Flask-CORS==4.0.0
    mysql-connector-python==8.0.33
    python-dotenv==1.0.0
    bcrypt==4.1.2
    pytz==2024.1
    gunicorn==21.2.0
    google-generativeai==0.3.2
    cohere==4.21
    groq==0.4.2